# scrap

./: Cargo.toml  LICENSE.md  README.md  build.rs
examples/: ffplay.rs  list.rs  main.rs  quartz.rs  screenshot.rs  x11.rs
src/: lib.rs
src/common/: dxgi.rs  mod.rs  quartz.rs  x11.rs
src/dxgi/: ffi.rs  mod.rs
src/quartz/: capturer.rs  config.rs  display.rs  ffi.rs  frame.rs
src/x11/: capturer.rs  display.rs  ffi.rs  iter.rs  mod.rs  server.rs
